--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <header>
         <div class="limitador">
             <h1><a href="index.html">CHURCH</a></h1>
+            <nav>
+                <a href="sobre.php">Sobre</a>
+                <a href="galeria.php">Galeria</a>
+                <a href="kids.php">Kids</a>
+                <a href="contato.php">Contato</a>
+                <a href="doacoes.php">Doações</a>
+                <a href="login.php">Login</a>
+            </nav>
         </div>
     </header>
 
