--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header>
-        <div class="limitador">
+        <div>
+
             <h1><a href="index.html">CHURCH</a></h1>
+
             <nav>
                 <a href="quem-somos.html">Quem somos</a>
                 <a href="projetos.html">Projetos</a>
@@ -19,6 +21,7 @@
                 <a href="Contatos.html">Contatos</a>
                 <!-- <a href="login.html">Login</a> -->
             </nav>
+
         </div>
     </header>
 
@@ -33,8 +36,9 @@
 
     <div class="centralizar box horarios">
         <h2>
-            
+            Campus - Jd. Eliane  SP
         </h2>
+        <br>
         <p>
             Sábado: 17h | Domingo: 9h30 - 11h30 - 16h30
             18h30 e 20h30 | Segunda: 20h30
