--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="/CSS/estilo.css">
 </head>
 <body>
-    <header>
+    <header class="nowrap">
         <div>
 
+            <div>
             <h1><a href="index.html">CHURCH</a></h1>
+            </div>
 
+            <div>
             <nav>
                 <a href="quem-somos.html">Quem somos</a>
                 <a href="projetos.html">Projetos</a>
@@ -21,6 +24,7 @@
                 <a href="Contatos.html">Contatos</a>
                 <!-- <a href="login.html">Login</a> -->
             </nav>
+            </div>
 
         </div>
     </header>
